@@ -1995,17 +1995,6 @@ return|return
 name|nodes
 return|;
 block|}
-name|String
-name|coreName
-init|=
-name|req
-operator|.
-name|getCore
-argument_list|()
-operator|.
-name|getName
-argument_list|()
-decl_stmt|;
 name|ClusterState
 name|cstate
 init|=
@@ -2318,8 +2307,6 @@ operator|.
 name|getName
 argument_list|()
 argument_list|,
-name|coreName
-argument_list|,
 literal|null
 argument_list|,
 name|ZkStateReader
@@ -2409,8 +2396,6 @@ name|leaderReplica
 operator|.
 name|getName
 argument_list|()
-argument_list|,
-name|coreName
 argument_list|,
 literal|null
 argument_list|,
@@ -8684,14 +8669,6 @@ argument_list|,
 name|myShardId
 argument_list|,
 name|leaderReplica
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|req
-operator|.
-name|getCore
-argument_list|()
 operator|.
 name|getName
 argument_list|()
