@@ -2952,9 +2952,6 @@ name|shardId
 parameter_list|,
 name|String
 name|thisCoreNodeName
-parameter_list|,
-name|String
-name|coreName
 parameter_list|)
 block|{
 return|return
@@ -2965,10 +2962,6 @@ argument_list|,
 name|shardId
 argument_list|,
 name|thisCoreNodeName
-argument_list|,
-name|coreName
-argument_list|,
-literal|null
 argument_list|)
 return|;
 block|}
@@ -2990,9 +2983,6 @@ name|String
 name|thisCoreNodeName
 parameter_list|,
 name|String
-name|coreName
-parameter_list|,
-name|String
 name|mustMatchStateFilter
 parameter_list|)
 block|{
@@ -3004,8 +2994,6 @@ argument_list|,
 name|shardId
 argument_list|,
 name|thisCoreNodeName
-argument_list|,
-name|coreName
 argument_list|,
 name|mustMatchStateFilter
 argument_list|,
@@ -3029,9 +3017,6 @@ name|shardId
 parameter_list|,
 name|String
 name|thisCoreNodeName
-parameter_list|,
-name|String
-name|coreName
 parameter_list|,
 name|String
 name|mustMatchStateFilter
